Change branch name for versioning

--- a/.github/workflows/publish-subsplits.yml
+++ b/.github/workflows/publish-subsplits.yml
@@ -3,7 +3,7 @@ name: Sub-Split Publishing
 on:
   push:
     branches:
-      - main
+      - 0.1
   create:
     tags:
       - '*'
@@ -33,7 +33,7 @@ jobs:
           key: '${{ runner.os }}-splitsh'
       - uses: frankdejonge/use-subsplit-publish@1.0.0-beta.3
         with:
-          source-branch: 'main'
+          source-branch: '0.1'
           config-path: './config.subsplit-publish.json'
           splitsh-path: './.splitsh/splitsh-lite'
           splitsh-version: 'v1.0.1'
