--- a/src/Bridge/Blade/composer.json
+++ b/src/Bridge/Blade/composer.json
@@ -10,6 +10,8 @@
     },
     "require": {
         "php": "^7.0 || ^8.0",
-        "illuminate/view": "^8.0 || ^9.0"
-    }
+        "illuminate/view": "^8.0 || ^9.0",
+        "schranz-templating/template-renderer": "^0.1"
+    },
+    "minimum-stability": "dev"
 }
