--- a/src/Bridge/Twig/composer.json
+++ b/src/Bridge/Twig/composer.json
@@ -10,7 +10,8 @@
     },
     "require": {
         "php": "^7.0 || ^8.0",
-        "schranz/template-renderer": "^0.1",
-        "twig/twig": "^1.0 || ^2.0 || ^3.0"
-    }
+        "twig/twig": "^1.0 || ^2.0 || ^3.0",
+        "schranz-templating/template-renderer": "^0.1"
+    },
+    "minimum-stability": "dev"
 }
