--- a/src/Bridge/Mustache/composer.json
+++ b/src/Bridge/Mustache/composer.json
@@ -1,16 +1,16 @@
 {
-    "name": "schranz-templating/plates-bridge",
-    "description": "A bridge for the template renderer for plates template engine.",
+    "name": "schranz-templating/mustache-bridge",
+    "description": "A bridge for the template renderer for mustache template engine.",
     "type": "library",
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "Schranz\\Templating\\Bridge\\Plates\\": ""
+            "Schranz\\Templating\\Bridge\\Mustache\\": ""
         }
     },
     "require": {
         "php": "^7.0 || ^8.0",
-        "league/plates": "^3.0",
+        "mustache/mustache": "^2.0",
         "schranz-templating/template-renderer": "^0.1"
     },
     "minimum-stability": "dev"
