--- a/config.subsplit-publish.json
+++ b/config.subsplit-publish.json
@@ -86,6 +86,11 @@
             "target": "git@github.com:schranz-templating/symfony-latte-integration.git"
         },
         {
+            "name": "SymfonySmartyIntegration",
+            "directory": "src/Integration/Symfony/Smarty",
+            "target": "git@github.com:schranz-templating/symfony-smarty-integration.git"
+        },
+        {
             "name": "SymfonyTwigIntegration",
             "directory": "src/Integration/Symfony/Twig",
             "target": "git@github.com:schranz-templating/symfony-twig-integration.git"
