Add Symfony Mustache Integration

--- a/examples/usages/symfony/composer.json
+++ b/examples/usages/symfony/composer.json
@@ -20,6 +20,13 @@
         },
         {
             "type": "path",
+            "url": "./../../../src/Integration/Symfony/Mustache",
+            "options": {
+                "symlink": true
+            }
+        },
+        {
+            "type": "path",
             "url": "./../../../src/Integration/Symfony/Smarty",
             "options": {
                 "symlink": true
@@ -40,6 +47,7 @@
         "doctrine/annotations": "^1.13",
         "schranz-templating/symfony-blade-integration": "@dev",
         "schranz-templating/symfony-latte-integration": "@dev",
+        "schranz-templating/symfony-mustache-integration": "@dev",
         "schranz-templating/symfony-smarty-integration": "@dev",
         "schranz-templating/symfony-twig-integration": "@dev",
         "symfony/console": "6.1.*",
