--- a/config.subsplit-publish.json
+++ b/config.subsplit-publish.json
@@ -86,6 +86,11 @@
             "target": "git@github.com:schranz-templating/symfony-latte-integration.git"
         },
         {
+            "name": "SymfonyMustacheIntegration",
+            "directory": "src/Integration/Symfony/Mustache",
+            "target": "git@github.com:schranz-templating/symfony-mustache-integration.git"
+        },
+        {
             "name": "SymfonySmartyIntegration",
             "directory": "src/Integration/Symfony/Smarty",
             "target": "git@github.com:schranz-templating/symfony-smarty-integration.git"
