--- a/examples/usages/laravel/composer.json
+++ b/examples/usages/laravel/composer.json
@@ -4,12 +4,22 @@
     "description": "The Laravel Framework.",
     "keywords": ["framework", "laravel"],
     "license": "MIT",
+    "repositories": [
+        {
+            "type": "path",
+            "url": "./../../../src/Integration/Laravel/Blade",
+            "options": {
+                "symlink": true
+            }
+        }
+    ],
     "require": {
         "php": "^8.0.2",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "schranz-templating/laravel-blade-integration": "@dev"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
