--- a/examples/usages/laravel/composer.json
+++ b/examples/usages/laravel/composer.json
@@ -32,6 +32,13 @@
             "options": {
                 "symlink": true
             }
+        },
+        {
+            "type": "path",
+            "url": "./../../../src/Integration/Laravel/Smarty",
+            "options": {
+                "symlink": true
+            }
         }
     ],
     "require": {
@@ -43,7 +50,8 @@
         "schranz-templating/laravel-blade-integration": "@dev",
         "schranz-templating/laravel-handlebars-integration": "@dev",
         "schranz-templating/laravel-mustache-integration": "@dev",
-        "schranz-templating/laravel-plates-integration": "@dev"
+        "schranz-templating/laravel-plates-integration": "@dev",
+        "schranz-templating/laravel-smarty-integration": "@dev"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
