--- a/examples/usages/laravel/composer.json
+++ b/examples/usages/laravel/composer.json
@@ -21,6 +21,13 @@
         },
         {
             "type": "path",
+            "url": "./../../../src/Integration/Laravel/Latte",
+            "options": {
+                "symlink": true
+            }
+        },
+        {
+            "type": "path",
             "url": "./../../../src/Integration/Laravel/Mustache",
             "options": {
                 "symlink": true
@@ -49,6 +56,7 @@
         "laravel/tinker": "^2.7",
         "schranz-templating/laravel-blade-integration": "@dev",
         "schranz-templating/laravel-handlebars-integration": "@dev",
+        "schranz-templating/laravel-latte-integration": "@dev",
         "schranz-templating/laravel-mustache-integration": "@dev",
         "schranz-templating/laravel-plates-integration": "@dev",
         "schranz-templating/laravel-smarty-integration": "@dev"
