--- a/examples/usages/laravel/composer.json
+++ b/examples/usages/laravel/composer.json
@@ -46,6 +46,13 @@
             "options": {
                 "symlink": true
             }
+        },
+        {
+            "type": "path",
+            "url": "./../../../src/Integration/Laravel/Twig",
+            "options": {
+                "symlink": true
+            }
         }
     ],
     "require": {
@@ -59,7 +66,8 @@
         "schranz-templating/laravel-latte-integration": "@dev",
         "schranz-templating/laravel-mustache-integration": "@dev",
         "schranz-templating/laravel-plates-integration": "@dev",
-        "schranz-templating/laravel-smarty-integration": "@dev"
+        "schranz-templating/laravel-smarty-integration": "@dev",
+        "schranz-templating/laravel-twig-integration": "@dev"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
