--- a/config.subsplit-publish.json
+++ b/config.subsplit-publish.json
@@ -71,6 +71,11 @@
             "target": "git@github.com:schranz-templating/twig-bridge.git"
         },
         {
+            "name": "LaminasPlatesIntegration",
+            "directory": "src/Integration/Laminas/Plates",
+            "target": "git@github.com:schranz-templating/laminas-plates-integration.git"
+        },
+        {
             "name": "LaravelBladeIntegration",
             "directory": "src/Integration/Laravel/Blade",
             "target": "git@github.com:schranz-templating/laravel-blade-integration.git"
