--- a/config.subsplit-publish.json
+++ b/config.subsplit-publish.json
@@ -81,6 +81,11 @@
             "target": "git@github.com:schranz-templating/laminas-handlebars-integration.git"
         },
         {
+            "name": "LaminasMustacheIntegration",
+            "directory": "src/Integration/Laminas/Mustache",
+            "target": "git@github.com:schranz-templating/laminas-mustache-integration.git"
+        },
+        {
             "name": "LaravelBladeIntegration",
             "directory": "src/Integration/Laravel/Blade",
             "target": "git@github.com:schranz-templating/laravel-blade-integration.git"
