Add Laminas Smarty Integration

--- a/examples/usages/laminas/composer.json
+++ b/examples/usages/laminas/composer.json
@@ -30,6 +30,13 @@
             "options": {
                 "symlink": true
             }
+        },
+        {
+            "type": "path",
+            "url": "./../../../src/Integration/Laminas/Smarty",
+            "options": {
+                "symlink": true
+            }
         }
     ],
     "require": {
@@ -40,7 +47,8 @@
         "laminas/laminas-mvc": "^3.1.1",
         "schranz-templating/laminas-handlebars-integration": "@dev",
         "schranz-templating/laminas-mustache-integration": "@dev",
-        "schranz-templating/laminas-plates-integration": "@dev"
+        "schranz-templating/laminas-plates-integration": "@dev",
+        "schranz-templating/laminas-smarty-integration": "@dev"
     },
     "autoload": {
         "psr-4": {
