--- a/config.subsplit-publish.json
+++ b/config.subsplit-publish.json
@@ -76,6 +76,11 @@
             "target": "git@github.com:schranz-templating/laminas-handlebars-integration.git"
         },
         {
+            "name": "LaminasLatteIntegration",
+            "directory": "src/Integration/Laminas/Latte",
+            "target": "git@github.com:schranz-templating/laminas-latte-integration.git"
+        },
+        {
             "name": "LaminasMustacheIntegration",
             "directory": "src/Integration/Laminas/Mustache",
             "target": "git@github.com:schranz-templating/laminas-mustache-integration.git"
