--- a/examples/usages/laminas/composer.json
+++ b/examples/usages/laminas/composer.json
@@ -12,6 +12,13 @@
     "repositories": [
         {
             "type": "path",
+            "url": "./../../../src/Integration/Laminas/Blade",
+            "options": {
+                "symlink": true
+            }
+        },
+        {
+            "type": "path",
             "url": "./../../../src/Integration/Laminas/Handlebars",
             "options": {
                 "symlink": true
@@ -59,6 +66,7 @@
         "laminas/laminas-development-mode": "^3.2",
         "laminas/laminas-skeleton-installer": "^0.6",
         "laminas/laminas-mvc": "^3.1.1",
+        "schranz-templating/laminas-blade-integration": "@dev",
         "schranz-templating/laminas-handlebars-integration": "@dev",
         "schranz-templating/laminas-latte-integration": "@dev",
         "schranz-templating/laminas-mustache-integration": "@dev",
