--- a/config.subsplit-publish.json
+++ b/config.subsplit-publish.json
@@ -81,6 +81,11 @@
             "target": "git@github.com:schranz-templating/laminas-handlebars-integration.git"
         },
         {
+            "name": "LaminasLaminasViewIntegration",
+            "directory": "src/Integration/Laminas/LaminasView",
+            "target": "git@github.com:schranz-templating/laminas-laminas-view-integration.git"
+        },
+        {
             "name": "LaminasLatteIntegration",
             "directory": "src/Integration/Laminas/Latte",
             "target": "git@github.com:schranz-templating/laminas-latte-integration.git"
