--- a/src/Adapter/Smarty/composer.json
+++ b/src/Adapter/Smarty/composer.json
@@ -8,6 +8,15 @@
             "Schranz\\Templating\\Adapter\\Smarty\\": ""
         }
     },
+    "repositories": [
+        {
+            "type": "path",
+            "url": "./../../TemplateRenderer",
+            "options": {
+                "symlink": true
+            }
+        }
+    ],
     "require": {
         "php": "^7.0 || ^8.0",
         "smarty/smarty": "^3.0 || ^4.1",
