--- a/src/Integration/Symfony/Handlebars/composer.json
+++ b/src/Integration/Symfony/Handlebars/composer.json
@@ -8,6 +8,22 @@
             "Schranz\\Templating\\Integration\\Symfony\\Handlebars\\": ""
         }
     },
+    "repositories": [
+        {
+            "type": "path",
+            "url": "./../../../TemplateRenderer",
+            "options": {
+                "symlink": true
+            }
+        },
+        {
+            "type": "path",
+            "url": "./../../../Adapter/Handlebars",
+            "options": {
+                "symlink": true
+            }
+        }
+    ],
     "require": {
         "php": "^7.0 || ^8.0",
         "salesforce/handlebars-php": "^2.3",
