--- a/src/Integration/Symfony/Mustache/composer.json
+++ b/src/Integration/Symfony/Mustache/composer.json
@@ -8,6 +8,22 @@
             "Schranz\\Templating\\Integration\\Symfony\\Mustache\\": ""
         }
     },
+    "repositories": [
+        {
+            "type": "path",
+            "url": "./../../../TemplateRenderer",
+            "options": {
+                "symlink": true
+            }
+        },
+        {
+            "type": "path",
+            "url": "./../../../Adapter/Mustache",
+            "options": {
+                "symlink": true
+            }
+        }
+    ],
     "require": {
         "php": "^7.0 || ^8.0",
         "mustache/mustache": "^2.0",
